+Validation, fixing bugs (account menu visibility)

--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -135,6 +135,7 @@ nav {
     z-index: 2;
     margin-left: 5px;
     margin-top: 25px;
+    color: white;
   }
 
   #logout-button {
@@ -212,6 +213,7 @@ nav {
   =========================================================================================================*/
 
   .gallery {
+    margin-top: 150px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 10px;
@@ -308,6 +310,21 @@ Account
   margin-bottom: 0px;
 }
 
+.interface-pop {
+  display: none;
+  border: 1px solid black;
+  padding: 10px;
+  margin-top: -20px;
+  margin-bottom: 0px;
+}
+
+.account-menu-interface {
+  border: 1px solid black;
+  padding: 10px;
+  margin-top: -20px;
+  margin-bottom: 0px;
+}
+
 .account-menu {
   height: 100%;
 }
@@ -357,4 +374,57 @@ td {
   margin-bottom: 400px;
 }
 
+/*==============================================================================================================
+REGISTER
+==============================================================================================================*/
 
+label[for="username"] {
+  margin-left: 50px;
+}
+
+label[for="password"] {
+  margin-left: 55px;
+}
+
+label[for="confirm-password"] {
+  margin-left: 30px;
+}
+
+label[for="email"] {
+  margin-left: 63px;
+}
+
+#username,
+#password,
+#confirm-password,
+#email {
+  border-radius: 10px;
+}
+
+#przycisk {
+  width: 65%;
+  margin-left: 31px;
+  border: solid white;
+  color: grey;
+  background-color: black;
+  margin-top: 10px;
+}
+
+.flashes {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: red;
+  background-color: #615f5f;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  padding: 5px;
+  margin-top: 10px; 
+}
+
+.registration-form {
+  position: relative;
+  margin-bottom: 20px;
+}
